# Quickjs-Example-2048

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.c  example.js
pthread/: pthread-for-win32.c
